added metada for asset linking
